# snapsmack

./: .gitignore  .htaccess  BRANCHING.md  CHANGELOG-0.7.3.txt  CHANGELOG-0.7.3a.txt  CHANGELOG-0.7.4.html  CHANGELOG-0.7.4.txt  CHANGELOG-0.7.4b.txt  CHANGELOG.md  CLAUDE.md  FTP-DEPLOY-LIST.md  PHASE1-GIT-COMMANDS.md  PICASA-SKIN-SPEC.md  README.md  afecrlf false  albums.php  api-calendar.php  api.php  archive.php  auth.php  backfill-checksums.php  backfill-thumbs.php  blog.php  blogroll.php  check.php  collection.php  collections.php  community-auth.php  cron-rss-fetch.php  cron-smackverse.php  cron-version-check.php  download.php  error404.php  error500.php  gallery-wall.php  index.html  index.php  install.php  load-more.php  login.php  (+135 more)
.githooks/: pre-commit
_crash-recovery-2026-07-17/: assets~css~ss-pixel.css  assets~js~ss-engine-jive-border.js  assets~js~ss-engine-jive-turkey.js  assets~js~ss-pixel.js  core~manifest-inventory.php  skins~jive-turkey~jive-turkey-config.php  skins~jive-turkey~skin-profile.php  wip~jive-turkey~JIVE-TURKEY-STATUS.md  wip~jive-turkey~ss-engine-jive-border.js  wip~jive-turkey~ss-engine-jive-turkey.js
_spec/: snapsmack-feature-spec-079b.docx
_to_delete/: _cn_check.php
core/: admin-footer.php  admin-header.php  ai-provider.php  api-auth.php  asset-sync.php  auth-recovery.php  auth-smack.php  auth.php  ban-check.php  blogroll-push.php  blurhash.php  cloud-engine.php  community-component.php  db.php  (+83 more)
tools/gyss/src-tauri/: Cargo.toml  tauri.conf.json
tools/gyss/src-tauri/capabilities/: default.json
tools/gyss/src-tauri/src/: lib.rs
(+1274 files in other folders)
