[package]
name = "get-your-shit-sorted"
version = "0.1.0"
edition = "2021"
description = "GET YOUR SHIT SORTED — SnapSmack desktop photo sorting tool"
license = "GPL-3.0"

[lib]
name = "gyss_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-fs   = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
